--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>heroku-test</title>
   </head>
   <body>
-    <h1>heroku test</h1>
-  
+    <h1>heroku test and stuff</h1>
+
   </body>
 </html>
